corrected spacing on badge modal and fixed download

--- a/src/App.css
+++ b/src/App.css
@@ -45,8 +45,7 @@
 	left: 20px;
 
 	/* margin: 2em; */
-  margin-top: 40px;
-  
+	margin-top: 40px;
 
 	background-color: #e1eeff;
 }
@@ -79,12 +78,12 @@
 
 	height: 118px;
 	left: 150px;
-  top: 100px;
+	top: 100px;
 	/* margin: 1em; */
-  margin-top: 1.7em;
-  margin-bottom: 1em;
-  margin-right: 1em;
-  margin-left: 1.27em;
+	margin-top: 1.7em;
+	margin-bottom: 1em;
+	margin-right: 1em;
+	margin-left: 1.27em;
 
 	color: black;
 	background-color: #fffaca;
@@ -119,63 +118,58 @@ hr {
 	background-color: #e5e5e5;
 }
 
-
 .modal-carousel {
 	width: 394px;
 	height: auto;
-	left: 20px;
-	top: 2em;
+	/* left: 20px; */
+	/* top: 2em; */
+	margin-bottom: 2em;
 	background-color: #e5e5e5;
+	display: block;
+	/* margin-left: 17px; */
+	margin-left: 1em;
+	margin-right: auto;
 }
 
 .talk-card {
-  width: 374px;
+	width: 374px;
 	height: 75px;
 	left: 20px;
 	/* margin: 1em; */
-  border-radius: 8px;
+	border-radius: 8px;
 	border: 1px;
-  text-align: center;
-
+	text-align: center;
 }
 
 .site-wrapper {
-
-  /* display: grid;
+	/* display: grid;
   grid-template-columns: 1em, 600px, 1em;
   /* grid-template-rows: 150px, 180px, 700px, 250px, 250px; */
-  /* grid-template-rows: 1fr, 1fr, 1fr, 1fr, 1fr;   */ 
-
+	/* grid-template-rows: 1fr, 1fr, 1fr, 1fr, 1fr;   */
 }
 
 .jumbo-wrapper {
-
-  grid-row: 1 / span 1;
-  
-
+	grid-row: 1 / span 1;
 }
 
-.talk-wrapper { 
-  grid-row: 2 /span 1;
+.talk-wrapper {
+	grid-row: 2 / span 1;
 }
 
 .cara-wrapper {
-  grid-row: 3 / span 1;
-
+	grid-row: 3 / span 1;
 }
 
 .badge-wrapper {
-  grid-row: 4 / span 1; 
-
-
+	grid-row: 4 / span 1;
 }
 
 .cdc-wrapper {
-  grid-row: 6 / span 1; 
-
-
+	grid-row: 6 / span 1;
 }
-
+.carousel-item {
+	background-color: #fffaca;
+}
 
 @media screen and (max-width: 600px) {
 	.brand {
